# banking-commons

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  azure-architecture.md
src/banking_commons/: __init__.py
src/banking_commons/email/: __init__.py  client.py  config.py  markdown.py
tests/: test_email.py
